# tokenomics-from-first-principles

./: LICENSE  README.md  llama2_model.py  llama_tp.py  llama_trace_4layers0_with_annotations.json  llama_trace_4layers1_with_annotations.json  profile_vllm.py  pyproject.toml  sharding_playground.py  tensor_parallel_example_toy.py  trace0.json  trace1.json
blogpost/: Tokenomics from first principles 1a415b90a59f809c8386ccebd52f8b42.md  blogpost.md  mfu_estimations.md  twitter_thread.md
experiments/: llama_31_8b_16000in_1000ut.json  llama_31_8b_2000in_300out.json  llama_33_70b_16000in_1000out.json  llama_33_70b_2000in_300out.json
experiments_massive/: llama_31_8b_16000in_1000ut.json  llama_31_8b_2000in_300out.json  llama_33_70b_16000in_1000out.json  llama_33_70b_2000in_300out.json  llama_33_70b_seq10000_out300.json  llama_33_70b_seq10001_out100.json  llama_33_70b_seq10003_out700.json  llama_33_70b_seq1000_out300.json  llama_33_70b_seq1001_out100.json  llama_33_70b_seq1003_out700.json  llama_33_70b_seq1003_out900 copy.json  llama_33_70b_seq1003_out900.json  llama_33_70b_seq100_out300.json  llama_33_70b_seq101_out100.json  llama_33_70b_seq1024_out1.json  llama_33_70b_seq1024_out1000.json  llama_33_70b_seq103_out700.json  llama_33_70b_seq103_out900.json  llama_33_70b_seq11000_out300.json  llama_33_70b_seq11001_out100.json  llama_33_70b_seq11003_out700.json  llama_33_70b_seq12000_out300.json  llama_33_70b_seq12001_out100.json  llama_33_70b_seq12003_out700.json  llama_33_70b_seq13000_out300.json  llama_33_70b_seq13001_out100.json  llama_33_70b_seq13003_out700.json  (+138 more)
(+14 files in other folders)
