[tool.poetry]
name = "llm-inference-from-first-principles"
version = "0.1.0"
description = ""
authors = ["Piotr Mazurek <piotr635@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
accelerate = "^0.34.0"

[tool.poetry.group.dev.dependencies]
transformers = "^4.44.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
